# passman

./: .passman_data.json  Cargo.toml  README.md
src/: main.rs
