[package]
name = "passman"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "0.10"
aes-gcm = "0.10.2"
rand = "0.8.5"
sha2 = "0.10.7"
base64 = "0.21.4"
rpassword = "7.3.1"
